# project-chimera

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  Makefile  README.md  README_go_nogo.md  conda-lock.yml  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: experiment_report.md
.github/workflows/: ci.yml
chimera/data/: dataloader.py
chimera/losses/: contrastive.py
chimera/models/: image_encoder.py  mock_models.py  text_encoder.py
chimera/train/: train.py  train_sanity.py
chimera/utils/: mlflow_utils.py
reports/: architecture_image_encoder.md  architecture_text_encoder.md  bench_contrastive_loss.md  bench_dataloader.md  checksums.json  sanity_check.md
scripts/: bench_contrastive_loss.py  bench_dataloader.py  bench_image_encoder.py  bench_text_encoder.py  download_prepare_data.py  run_day2_go_nogo.sh  run_training.py  verify_mlflow_setup.py
tests/: test_setup.py
tests/losses/: test_contrastive.py
tests/models/: test_image_encoder.py  test_text_encoder.py
