[project]
name = "chimera"
version = "0.1.0"
description = "Building a mini-CLIP model from 'didactic scratch'."

[tool.setuptools.packages.find]
where = ["."]
include = ["chimera*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

# --- SECCIÓN CORREGIDA ---
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501"]
# -------------------------